# hwutils

./: main.py  pyproject.toml
graphs/: cpu.py  fan.py  gpu.py  temp.py
hwutils/: CPU.py  DISK.py  FAN.py  GPU.py  NET.py  PROC.py  SYS.py  Sensor.py  __init__.py  __main__.py  decorators.py
